Closed Bug 1347835 Opened 9 years ago Closed 9 years ago

Some input methods can not enter numbers and symbols in XP

Categories

(Core :: Widget: Win32, defect)

52 Branch
x86
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- fixed
firefox54 --- fixed
firefox55 --- fixed

People

(Reporter: xuyuehang, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(2 files)

If users use the system comes with input method in Windows XP called "zhengma","quanpin" and "abc input", they can't enter numbers and symbols in Firefox 52 release&ESR. It works fine in Firefox 51. This problem may bring a relatively large influence in China and Taiwan.
(In reply to yxu from comment #0) > If users use the system comes with input method in Windows XP called > "zhengma","quanpin" and "abc input", they can't enter numbers and symbols in > Firefox 52 release&ESR. It works fine in Firefox 51. Could you explain exact STR about this? > This problem may bring a relatively large influence in China and Taiwan. I don't think so because nobody has reported this bug for this (at least) 12 weeks. (I.e., nobody of such IME users is testing our Beta nor Developer Edition (nor Nightly).)
Component: Keyboard: Navigation → Widget: Win32
Keywords: inputmethod
OS: Unspecified → Windows
Hardware: Unspecified → x86
And it's odd. We supports only IMM mode on WinXP. However, we haven't touched IMM module since 50: https://hg.mozilla.org/mozilla-central/log/tip/widget/windows/IMMHandler.cpp Could be a regression of Keyboard code.
(In reply to Masayuki Nakano [:masayuki] from comment #1) > Could you explain exact STR about this? First switch IME to "zhengma". What ever type in ",./" on the right side of the letter "M", or "1234…", it doesn't appear in either the built-in search box or the text box in the page. > I don't think so because nobody has reported this bug for this (at least) 12 > weeks. (I.e., nobody of such IME users is testing our Beta nor Developer > Edition (nor Nightly).) On the one hand the current use of xp users is getting less. On the other hand there are not many users will use Zhengma, Quanpin these input method, although they are the system comes with. The third party IME is work fine for the 52 version.
We received a feedback from a Taiwanese user who used an input method named "fast input method" could cause this problem. Its official website is: http://input.foruto.com/fast/downloads.php
Thank you, does it available on Win7 or later? Then, we should fix it ASAP. Anyway, I don't have much time to work on this. If somebody provide IME and keyboard log here, it's really helpful. You can take a log with following envs: MOZ_LOG=nsTextStoreWidgets:5,nsIMM32HandlerWidgets:5,NativeKeyWidgets:5 MOZ_LOG_FILE=C:\fx.log Then, keyboard and IME handling is logged into fx.log into C drive. Note that this records a lot and *all inputting text*. Therefore, you should launch Firefox and just type "1" and quit from Firefox, then, remove the following envs (or set these numbers to 0).
(In reply to Masayuki Nakano [:masayuki] from comment #6) > Thank you, does it available on Win7 or later? Then, we should fix it ASAP. > > Anyway, I don't have much time to work on this. If somebody provide IME and > keyboard log here, it's really helpful. > > You can take a log with following envs: > > MOZ_LOG=nsTextStoreWidgets:5,nsIMM32HandlerWidgets:5,NativeKeyWidgets:5 > MOZ_LOG_FILE=C:\fx.log > > Then, keyboard and IME handling is logged into fx.log into C drive. > > Note that this records a lot and *all inputting text*. Therefore, you > should launch Firefox and just type "1" and quit from Firefox, then, remove > the following envs (or set these numbers to 0). I am glad to help with my virtual XP installed. However I found this on Mozilla's Developer Guide: "To build Firefox on Windows, you need a 64-bit version of Windows 7 or later and about 40 GB of free space on your hard drive ." The dilemma? :)
You don't need to build Firefox by yourself. You can get the log with release builds too because we need to debug any IME/keyboard layout which is difficult to get (e.g., needs to buy). You need to just set the env from PC's property (or in command line if you launch Firefox from command line).
Wow, you should attach such big text with a file :-) Anyway, thank you very much!
Okay, that's a bug of IME... Even if the IME doesn't handle the keydown event, it sends VK_PROCESS to us, sigh.
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
(In reply to Masayuki Nakano [:masayuki] from comment #15) > Could you test with this build? > https://archive.mozilla.org/pub/firefox/try-builds/masayuki@d-toybox.com- > 7d378660ae8993d735a393b1528ac22047e47449/try-win32/firefox-52.0.3.en-US. > win32.zip Hello Masayuki, I confirm that this build is working correctly with Smart ABC input method on WinXP 32 bit. Thanks very much for your time. Hope to see the release very soon! Best,
Flags: needinfo?(geraldx)
(In reply to Masayuki Nakano [:masayuki] from comment #15) > Could you test with this build? > https://archive.mozilla.org/pub/firefox/try-builds/masayuki@d-toybox.com- > 7d378660ae8993d735a393b1528ac22047e47449/try-win32/firefox-52.0.3.en-US. > win32.zip it works for me. Thanks!
Flags: needinfo?(yxu)
Comment on attachment 8856830 [details] Bug 1347835 NativeKey should dispatch keypress events even if WM_KEYDOWN is processed by IME but followed by printable WM_(SYS)CHAR messages https://reviewboard.mozilla.org/r/128756/#review131714
Attachment #8856830 - Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/6a5e9ccad294 NativeKey should dispatch keypress events even if WM_KEYDOWN is processed by IME but followed by printable WM_(SYS)CHAR messages r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment on attachment 8856830 [details] Bug 1347835 NativeKey should dispatch keypress events even if WM_KEYDOWN is processed by IME but followed by printable WM_(SYS)CHAR messages Approval Request Comment [Feature/Bug causing the regression]: Probably regression of bug 1300003. [User impact if declined]: Chinese people cannot input ASCII numeric and punctuation when Chinese IME is active keyboard layout. [Is this code covered by automated tests?]: Partially, yes. [Has the fix been verified in Nightly?]: Yes. [Needs manual test from QE? If yes, steps to reproduce]: No. [List of other uplifts needed for the feature/fix]: No. [Is the change risky?]: No. [Why is the change risky/not risky?]: The change is affects only when IME marks keydown message as "handled by IME". This isn't used if active IME is for TSF. It must be that only a few users still use legacy IME (non-TSF IME). Additionally, it becomes not to ignore following WM_CHAR messages as 51. (51 and earlier, WM_CHAR hasn't been removed from the message queue when this is checked. So, following WM_CHAR was handled later as orphan message.) [String changes made/needed]: No. [Approval Request Comment] If this is not a sec:{high,crit} bug, please state case for ESR consideration: This regression is serious especially for WinXP users because ESR52 is the last version to support WinXP and we don't support TSF mode on WinXP. User impact if declined: Chinese users (especially still using WinXP) cannot type ASCII numeric characters and punctuation characters when they select Chinese IME as active keyboard layout (Note that only installing Chinese IME to keyboard layout is the default setting of Windows). Fix Landed on Version: 55 Risk to taking this patch (and alternatives if risky): Not risky. This patch touches only legacy IME behavior case. See above for the detail. String or UUID changes made by this patch: No.
Attachment #8856830 - Flags: approval-mozilla-esr52?
Attachment #8856830 - Flags: approval-mozilla-aurora?
Comment on attachment 8856830 [details] Bug 1347835 NativeKey should dispatch keypress events even if WM_KEYDOWN is processed by IME but followed by printable WM_(SYS)CHAR messages Fix an input method issue. Aurora54+.
Attachment #8856830 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment on attachment 8856830 [details] Bug 1347835 NativeKey should dispatch keypress events even if WM_KEYDOWN is processed by IME but followed by printable WM_(SYS)CHAR messages I was told that China is among the top 5 countries using ESR releases. IME related fixes tend to be a bit unstable, but it seems this is a good candidate to take in ESR52.2. Hi Masayuki, David, do we have automated tests to ensure this fix doesn't cause any regressions? Can we ask for some manual QA for this? I would like us to beef up our IME testing. Thoughts?
Flags: needinfo?(masayuki)
Flags: needinfo?(dbolter)
Attachment #8856830 - Flags: approval-mozilla-esr52? → approval-mozilla-esr52+
(In reply to Ritu Kothari (:ritu) from comment #25) > Hi Masayuki, David, do we have automated tests to ensure this fix doesn't > cause any regressions? Unfortunately, no. Our automated tests are testing usual keyboard input result (widget/test/test_keycodes.xul). However, it tests not all keyboard layout's result in the world. Additionally, this is very odd case. IME consumes keydown message but it generates char message as usual character input instead of using composition messages. (IME should NOT consume the keydown message in this case.) Fortunately, this patch changes the behavior (backouts the regression) only when the keydown message is consumed by IME but it detects usual character input. Therefore, this patch must be safe. > Can we ask for some manual QA for this? I would like > us to beef up our IME testing. Thoughts? I think that testing if it's fixed actually is easy. However, checking if there are some regressions is impossible since we often meet odd behavior keyboard layouts and IMEs.
Flags: needinfo?(masayuki)
Looks like Masayuki covered this one. Thanks for the ping.
Flags: needinfo?(dbolter)
Hello all. Thanks again for trying to fix this problem. I just don't know why it takes so long to merge the fix to the release. It has been more than 3 months now. Kind regards, G
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: